# majordomo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
bootrom/: Makefile  bootrom.elf
doc/: ESPERANTO_README.md  EXT_STATUS.md  cosim.md  cva6-dromajo-integration.md
examples/: Makefile  dhry.mk  quick_run.sh
examples/cmn/: crt.S  syscalls.c  trace_macros.h  util.h
examples/linker/: linker.ld
examples/src/dhrystone/: dhry.h  dhry_1.c  memcpy.c  printf.c  syscalls.x  traps.c
examples/src/qsort/: qsort.c
gold/: bridge_inorder.cpp
include/: block_device.h  dromajo_stf.h  dromajo_template.h  machine.h  majordomo.h  majordomo_cosim.h  majordomo_fp_template.h  majordomo_protos.h  majordomo_sha.h.in  majordomo_template.h  network.h  options.h  riscv_cpu.h  riscv_isa.h  riscv_machine.h  stf_lib_sha.h.in  term_io.h  uart.h  virtio.h
linux/: md.boot.cfg
run/: Makefile  regression.sh
scripts/: bmi_mm.bare.riscv  md.boot.cfg  quick_run.sh  rootfs.cpio
src/: bin_utils.cpp  block_device.cpp  dromajo.cpp  dromajo_cosim_test.cpp  dromajo_main.cpp  dromajo_stf.cpp  dromajo_trace.cpp  fdt.cpp  fs.cpp  interrupts.cpp  iomem.cpp  json.cpp  machine.cpp  majordomo.cpp  majordomo_cosim.cpp  majordomo_cosim_test.cpp  majordomo_main.cpp  majordomo_stf.cpp  majordomo_trace.cpp  misc.cpp  network.cpp  options.cpp  pci.cpp  riscv_cpu.cpp  riscv_isa.cpp  riscv_machine.cpp  softfp.cpp  term_io.cpp  uart.cpp  virtio.cpp  zfa.cpp
tests/: CMakeLists.txt
tests/directed/: Makefile  TEST_MACRO_NOTES.txt  Vars.mk  run_decoder.sh  total_num_instructions
tests/directed/inc/: andestar_test.h  andestar_test_macros.h
tests/directed/src/decoder/: crt.S  decoder.c  syscalls.c  trace_macros.h  util.h
tests/directed/src/zfa/: fli_d.S  fli_h.S  fli_s.S
tests/directed/src/zicond/: czero_eqz.S  czero_nez.S
tests/elfs/: bmi_mm.bare.riscv  bmi_sanity.bare.riscv
tests/isa_test_suite/: Makefile  isa_tests_list.txt  run_dev_test_suite.sh  run_riscv_isa_test_suite.sh  run_riscv_isa_test_suite.sh.old  update_isa_tests_list.sh
tests/regress-compress/: Makefile
tests/reset_vector/: run_test.sh
tests/reset_vector/common/: bootrom.elf
tests/reset_vector/elf/: dhrystone_opt1.bare.riscv  dhrystone_opt2.bare.riscv  dhrystone_opt3.bare.riscv
tests/stf_gen/: Makefile  README.md  run_bare_metal.sh
tests/stf_gen/golden/: golden.bz2
tests/stf_load_store/: CMakeLists.txt  dump.sh
tests/stf_load_store/common/: crt.S  inittab  lnx_calls.c  rootfs.cpio  run_benchmark.sh  stf_load_store.bare.riscv  stf_load_store.linux.riscv  syscalls.c
tests/stf_load_store/golden/: baremetal.zstf  linux.zstf
tests/stf_load_store/scripts/: check_riscv_env_variable.sh  check_riscv_linux_env_variable.sh  create_linux_collateral.sh  run_baremetal_test.sh  run_linux_test.sh  trace.boot.cfg
tests/stf_load_store/src/: main.c
